<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <ImageButton
        android:id="@+id/btnLogOut"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_exit_to_app_24"
        android:scaleType="fitXY"
        app:tint="@color/lavender"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logOut_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/progressBarUser"/>
    <ImageButton
        android:id="@+id/leaderbord"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_leaderboard_24"
        android:scaleType="fitXY"
        app:tint="@color/lavender"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/leaderboard_button_description"
        app:layout_constraintTop_toTopOf="@+id/btnLogOut"
        app:layout_constraintStart_toEndOf="@+id/btnLogOut"
        android:layout_marginStart="10dp"/>

    <ImageButton
        android:id="@+id/quizz"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_quiz_24"
        android:scaleType="fitXY"
        app:tint="@color/lavender"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/quizz_button_description"
        app:layout_constraintTop_toTopOf="@+id/leaderbord"
        app:layout_constraintStart_toEndOf="@+id/leaderbord"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/username_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/level"
        app:layout_constraintEnd_toStartOf="@+id/progressBarUser"
        app:layout_constraintBottom_toBottomOf="@id/progressBarUser"
        android:layout_marginEnd="8dp"/>
    <ProgressBar
        android:id="@+id/progressBarUser"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:layout_constraintEnd_toEndOf="@id/tvUsername"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/lavender"/>

    </androidx.constraintlayout.widget.ConstraintLayout>